src/styles/NAVBAR-BUTTONS-FIXED.css
/* ... */
/* Media queries para diferentes tamaños */
@media (max-height: 700px) {
  /* iPhone mini - cards un poco más pequeñas */
  .gpMatchCard {
    min-height: 112px !important;
    padding: 5px !important;
  }
  
  .gpSlotImg {
    width: 22px !important;
    height: 22px !important;
  }
  
  .gpVs {
    width: 22px !important;
    height: 22px !important;
  }
}

@media (min-height: 850px) {
  /* iPhone grande - cards más espaciosas */
  .gpMatchCard {
    min-height: 128px !important;
    padding: 7px !important;
  }
  
  .gpSlotImg {
    width: 26px !important;
    height: 26px !important;
  }
  
  .gpVs {
    width: 26px !important;
    height: 26px !important;
  }
}

